# egile-agent-slidedeck

./: .env.example  .gitignore  HUB_INTEGRATION.md  QUICKSTART.md  README.md  example.py  install.bat  install.sh  pyproject.toml  start.bat  start.sh
src/egile_agent_slidedeck/: __init__.py  mcp_client.py  plugin.py  run_agent.py  run_mcp.py  run_server.py
tests/: __init__.py  test_plugin.py
